@@ -1,7 +1,9 @@
 package com.bungeobbang.backend.agenda.service;
 
 import com.bungeobbang.backend.agenda.domain.AgendaChat;
+import com.bungeobbang.backend.agenda.domain.AgendaLastReadChat;
 import com.bungeobbang.backend.agenda.domain.repository.AgendaChatRepository;
+import com.bungeobbang.backend.agenda.domain.repository.AgendaLastReadChatRepository;
 import com.bungeobbang.backend.agenda.domain.repository.AgendaMemberRepository;
 import com.bungeobbang.backend.agenda.domain.repository.CustomAgendaChatRepository;
 import com.bungeobbang.backend.agenda.dto.request.AgendaChatRequest;
@@ -14,7 +16,9 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * ✅ 학생용 답해요 채팅 서비스 (무한 스크롤 지원)
@@ -22,11 +26,13 @@ import java.util.List;
 @Service
 @RequiredArgsConstructor
 public class AgendaChatService {
-    private static final int CHAT_SIZE = 10;
     private final AgendaChatRepository agendaChatRepository;
     private final AgendaMemberRepository agendaMemberRepository;
-    private static final ObjectId MAX_OBJECT_ID = new ObjectId("ffffffffffffffffffffffff");
     private final CustomAgendaChatRepository customAgendaChatRepository;
+    private static final int CHAT_SIZE = 10;
+    private static final ObjectId MIN_OBJECT_ID = new ObjectId(0, 0);
+    private static final ObjectId MAX_OBJECT_ID = new ObjectId("ffffffffffffffffffffffff");
+    private final AgendaLastReadChatRepository agendaLastReadChatRepository;
 
     /**
      * ✅ 답해요 채팅 내역 조회 (무한 스크롤 방식)
@@ -44,16 +50,44 @@ public class AgendaChatService {
         }
 
         if (chatId == null) {
-            return agendaChatRepository.findChatsByAgendaIdAndMemberId(agendaId, memberId, pageable)
+            // 사용자의 마지막 읽은 채팅 가져오기
+            AgendaLastReadChat lastReadChat = agendaLastReadChatRepository.findByMemberIdAndAgendaId(memberId, agendaId)
+                    .orElse(new AgendaLastReadChat(null, null, null, MIN_OBJECT_ID));
+            ObjectId lastReadChatId = lastReadChat.getLastReadChatId();
+
+            // lastReadChatId보다 작은 채팅 가져오기
+            List<AgendaChatResponse> chats = agendaChatRepository
+                    .findChatsByAgendaIdAndMemberIdAndIdLessThan(agendaId, memberId, lastReadChatId, pageable)
                     .stream()
                     .map(AgendaChatResponse::from)
-                    .toList();
+                    .collect(Collectors.collectingAndThen(Collectors.toList(), list -> {
+                        Collections.reverse(list); // 🔹 리스트 역순 정렬
+                        return list;
+                    }));
+
+            // lastReadChatId보다 큰 채팅 가져오기
+            List<AgendaChatResponse> afterChats = agendaChatRepository
+                    .findChatsByAgendaIdAndMemberIdAndIdGreaterThan(agendaId, memberId, lastReadChatId)
+                    .stream()
+                    .map(AgendaChatResponse::from)
+                    .collect(Collectors.collectingAndThen(Collectors.toList(), list -> {
+                        Collections.reverse(list); // 🔹 리스트 역순 정렬
+                        return list;
+                    }));
+
+            chats.addAll(afterChats); // 최종 리스트 합치기
+
+            return chats;
         }
+
 
         return agendaChatRepository.findChatsByAgendaIdAndMemberIdAndIdLessThan(agendaId, memberId, chatId, pageable)
                 .stream()
                 .map(AgendaChatResponse::from)
-                .toList();
+                .collect(Collectors.collectingAndThen(Collectors.toList(), list -> {
+                    Collections.reverse(list); // 🔹 리스트 역순 정렬
+                    return list;
+                }));
     }
 
     public void saveChat(AgendaChatRequest request) {
